--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,32 @@ android {
     }
 }
 
+afterEvaluate {
+    def genDir = file("src/main/java/com/a3711activity")
+    genDir.deleteDir()
+    genDir.mkdirs()
+
+    // 生成 3711 个 Activity
+    for (int i = 0; i < 3711; i++) {
+        def activityName = "ActivityA79fS2k_$i"
+        def code = """
+package com.a3711activity;
+import android.app.Activity;
+import android.os.Bundle;
+
+public class $activityName extends Activity {
+    @Override
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        finish(); // 一启动就关闭
+    }
+}
+        """.trim()
+        def file = new File(genDir, "${activityName}.java")
+        file.text = code
+    }
+}
+
 dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
